--- a/css/Header.css
+++ b/css/Header.css
@@ -22,4 +22,10 @@
   max-width: 600px;
   margin: 0;
   font-weight: bold;
+}
+
+@media (max-width: 1024px) {
+  .container-header {
+    display: none;
+  }
 }/*# sourceMappingURL=Header.css.map */
