--- a/css/WeatherInfo.css
+++ b/css/WeatherInfo.css
@@ -1,6 +1,6 @@
 .search-weather {
   margin: 0 auto;
-  max-width: 50vw;
+  min-width: 40vw;
   background-color: rgba(251, 255, 0, 0.8);
   border-radius: 25px;
   padding: 15px;
@@ -22,10 +22,10 @@
 }
 .search-weather h1 {
   text-align: center;
-  font-size: 40px;
+  font-size: 4vw;
 }
 .search-weather label {
-  font-size: 30px;
+  font-size: 5vw;
   font-weight: bold;
 }
 .search-weather input {
@@ -34,7 +34,7 @@
   border-radius: 25px;
   width: 20vw;
   height: 8vh;
-  font-size: 25px;
+  font-size: 2.5px;
   padding: 3px 15px;
 }
 .search-weather-in {
@@ -48,6 +48,54 @@
   cursor: pointer;
   transition: 0.5s;
 }
+@media (hover: hover) and (pointer: fine) {
+  .search-weather img:hover {
+    transform: scale(1.1);
+  }
+}
+@media (hover: none) and (pointer: coarse) {
+  .search-weather img:active {
+    transform: scale(1.1);
+    opacity: 0.5;
+  }
+}
 .search-weather img:hover {
   scale: 1.1;
+}
+
+@media (max-width: 1440px) {
+  .search-weather-in label {
+    text-align: center;
+    max-width: 250px;
+  }
+  .search-weather-in input {
+    min-width: 250px;
+  }
+}
+@media (max-width: 576px) {
+  .search-weather-in {
+    flex-direction: column;
+  }
+}
+@media (max-width: 576px) and (hover: hover) and (pointer: fine) {
+  .search-weather input:hover {
+    transform: scale(1.1);
+  }
+}
+@media (max-width: 576px) and (hover: none) and (pointer: coarse) {
+  .search-weather input:active {
+    transform: scale(1.1);
+    opacity: 0.5;
+  }
+}
+@media (max-width: 576px) and (hover: hover) and (pointer: fine) {
+  .search-weather img:hover {
+    transform: scale(1.1);
+  }
+}
+@media (max-width: 576px) and (hover: none) and (pointer: coarse) {
+  .search-weather img:active {
+    transform: scale(1.1);
+    opacity: 0.5;
+  }
 }/*# sourceMappingURL=WeatherInfo.css.map */
