--- a/src/Pages/Header/Header.scss
+++ b/src/Pages/Header/Header.scss
@@ -1,26 +1,34 @@
-.container-header{
+@use "../../common" as *;
+
+.container-header {
   grid-area: container-header;
-  background-image: url('../../images/header.jpg');
+  background-image: url("../../images/header.jpg");
   background-position-y: 55%;
   background-position-x: 50%;
- background-size: cover;
+  background-size: cover;
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
   flex-direction: column;
   color: rgb(0, 136, 255);
   box-shadow: 5px 5px 10px #888888;
-    border-bottom-left-radius: 25px;
+  border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
-  
-  h1{
+
+  h1 {
     font-size: 50px;
     margin: 0;
   }
-  p{
+  p {
     font-size: 35px;
     max-width: 600px;
     margin: 0;
     font-weight: bold;
+  }
+}
+
+@include breakPoint(laptop) {
+  .container-header {
+    display: none;
   }
 }
