--- a/src/Pages/Main/Main.scss
+++ b/src/Pages/Main/Main.scss
@@ -1,11 +1,18 @@
+@use "../../common" as *;
+
 .container-main {
   grid-area: container-main;
   display: flex;
   flex-direction: column;
-  background-color: azure;
+  background-color: rgb(255, 240, 240);
   background-image: (url("../../images/sky.jpg"));
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   padding: 50px;
+}
+@include breakPoint(phone) {
+  .container-main {
+    padding: 25px;
+  }
 }
